[project]
name = "coffeme-bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Maksim Panin", email = "max.a.panin@gmail.com"},
]
dependencies = [
    "pre-commit>=3.7.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
